--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-
+/*need comment here next time. Totally forgot why this is here*/
 }
 
 head {}
@@ -8,11 +8,9 @@ head {}
 body {
 	margin:0;
     padding: 0;
-    background-color: #000000;
-	font-family: "Sansita Swashed", Arial;
-	color:#fc4242 ;
-
-
+    /*background-color: #000000;*/
+	font-family: "Sansita Swashed", Arial, Helvetica;
+	/*color:#fc4242 ;*/
 }
 
 .navbar {
@@ -128,19 +126,67 @@ body {
     .navbar-links.active {
         display: flex;
     }
-
-
-
-
-
-
-
 }
-/*
+
+
+
 .overlay {
-	position:relative;
-	top:100;
-	left:10;
+	padding: 2vw;
+    text-align: justify;
+    text-justify: inter-character;
+    opacity: .8;
+    position:relative;
+	background: orange;
+    color: #ff1100;
 	z-index: 1.5;
 	overflow: hidden;
-}*/
+    font-size: 1rem;
+}
+
+.button-container{
+    width:100%;
+}
+
+.landing-buttons {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 7vw;
+    justify-content: space-around;
+}
+
+.button {
+    background-color: #ffffff;
+    border: none;
+    padding: 5vw;
+    opacity: .8;
+
+}
+
+.button a { 
+    text-decoration: none;
+    font-family: "Sansita Swashed", Arial, Helvetica;
+    font-size: 6vw;
+ }
+
+.footer {
+    position: fixed;
+    bottom: 0vw;
+    /*background: #333333;*/
+    color: #ffffff;
+    width: 100%;
+    text-align:center;
+    font-size: 4vw;
+    opacity: .5
+}
+
+@media (min-width: 400px) {
+    .button-container {
+        display: none;
+    }
+
+    .footer {
+        font-size: 1.5vw;
+    }
+}
