--- a/CSS/style.css
+++ b/CSS/style.css
@@ -201,6 +201,17 @@ body {
     .footer {
         font-size: 1.5vw;
     }
+
+    .overlay h1 {
+        font-size: 4vw;
+        
+    }
+
+    .overlay p {
+        font-size: 2.5vw;
+        margin:0vw;
+        padding:0vw;
+    }
 }
 
 /*End of home.html*/
@@ -251,6 +262,8 @@ body {
         width: 15%;
         float: right;
         display: initial;
+        position: relative;
+        top: -120px;
     }
 
     .overlay-for-about h2 {
@@ -260,6 +273,7 @@ body {
     .overlay-for-about p {
         width: 600px;
         word-wrap: normal;
+        font-size: 1.5vw;
     }
 }
 
